--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,7 @@
 .site-header {
     border-top: $thick-line solid $strong-colour;
     border-bottom: $thin-line solid $highlight-colour;
+    margin-bottom: $endpara-margin;
 }
 
 /* Site footer
